[gd_scene load_steps=6 format=3 uid="uid://df005h4gy50fl"]

[ext_resource type="Script" path="res://Entities/Guards/Guard.gd" id="1_8n1kk"]
[ext_resource type="Texture2D" uid="uid://cjbaixgux1478" path="res://Entities/Entities.png" id="2_4waom"]
[ext_resource type="Texture2D" uid="uid://d1y5v4sd3axmk" path="res://Shaders/Lights/General.GradientTexture2D.tres" id="3_utqer"]
[ext_resource type="Shape2D" uid="uid://dsstw8sd6tnpd" path="res://Entities/Guards/Guard.CollisionShape2D.tres" id="4_unly5"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_wd8f2"]
closed = false
cull_mode = 1
polygon = PackedVector2Array(13, 1.99997, 6.99999, -4.00002, 4.99999, -3.00001, -1.00001, -3, -3.00001, -3.99999, -9, 2.00002)

[node name="Guard" type="CharacterBody2D"]
collision_layer = 17
collision_mask = 17
motion_mode = 1
script = ExtResource("1_8n1kk")
cooldown = 2.0

[node name="TriggerArea" type="Area2D" parent="."]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TriggerArea"]
polygon = PackedVector2Array(-24, -32, -24, 32, 256, 160, 256, -160)

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = -1.57079
texture = ExtResource("2_4waom")
region_enabled = true
region_rect = Rect2(96, 192, 64, 64)

[node name="GeneralLight" type="PointLight2D" parent="Sprite2D"]
position = Vector2(1.99998, -7)
color = Color(1, 1, 1, 0.941176)
blend_mode = 2
texture = ExtResource("3_utqer")

[node name="LightHelmet" type="PointLight2D" parent="Sprite2D"]
color = Color(0.956863, 0.619608, 0.113725, 1)
range_layer_min = -1
shadow_enabled = true
shadow_color = Color(0, 0, 0, 0.215686)
texture = ExtResource("3_utqer")
offset = Vector2(0, -4)
texture_scale = 0.6

[node name="LightOccluder2D" type="LightOccluder2D" parent="Sprite2D/LightHelmet"]
self_modulate = Color(1, 1, 1, 0)
occluder = SubResource("OccluderPolygon2D_wd8f2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = ExtResource("4_unly5")

[node name="AttackCooldown" type="Timer" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 32.0
max_neighbors = 5

[node name="UpdatePlayerPos" type="Timer" parent="NavigationAgent2D"]

[node name="KeepDistance" type="Node2D" parent="."]
visible = false

[node name="Line2D" type="Line2D" parent="KeepDistance"]
points = PackedVector2Array(-64, 0, 32, 0)

[node name="Position2D" type="Node2D" parent="KeepDistance"]
position = Vector2(-25, 0)

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[connection signal="area_entered" from="TriggerArea" to="." method="_on_TriggerArea_area_entered"]
[connection signal="body_entered" from="TriggerArea" to="." method="_on_TriggerArea_body_entered"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
[connection signal="path_changed" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_path_changed"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_velocity_computed"]
[connection signal="timeout" from="NavigationAgent2D/UpdatePlayerPos" to="." method="_on_UpdatePlayerPos_timeout"]
