[gd_scene load_steps=8 format=3 uid="uid://baiwsrdc0aog7"]

[ext_resource type="Script" path="res://Entities/Guards/Guard.gd" id="1_wqy3n"]
[ext_resource type="Texture2D" uid="uid://cjbaixgux1478" path="res://Entities/Entities.png" id="2_17aew"]
[ext_resource type="Texture2D" uid="uid://d1y5v4sd3axmk" path="res://Shaders/Lights/General.GradientTexture2D.tres" id="3_7ft35"]
[ext_resource type="Shape2D" uid="uid://dsstw8sd6tnpd" path="res://Entities/Guards/Guard.CollisionShape2D.tres" id="4_yu3yv"]
[ext_resource type="PackedScene" uid="uid://jtsjs2slrit2" path="res://Scripts/VisibilityHandlerV2.tscn" id="5_jekor"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wehjl"]
radius = 128.0

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_wd8f2"]
closed = false
cull_mode = 1
polygon = PackedVector2Array(13, 1.99997, 6.99999, -4.00002, 4.99999, -3.00001, -1.00001, -3, -3.00001, -3.99999, -9, 2.00002)

[node name="Guard" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 17
motion_mode = 1
script = ExtResource("1_wqy3n")
cooldown = 2.0

[node name="TriggerArea" type="Area2D" parent="."]
visible = false
collision_layer = 512
collision_mask = 512

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TriggerArea"]
polygon = PackedVector2Array(-24, -32, -24, 32, 256, 160, 256, -160)

[node name="GeneralArea" type="Area2D" parent="."]
visible = false
collision_layer = 768
collision_mask = 768

[node name="CollisionShape2D" type="CollisionShape2D" parent="GeneralArea"]
shape = SubResource("CircleShape2D_wehjl")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = -1.57079
texture = ExtResource("2_17aew")
region_enabled = true
region_rect = Rect2(96, 192, 64, 64)

[node name="GeneralLight" type="PointLight2D" parent="Sprite2D"]
color = Color(1, 1, 1, 0.941176)
energy = 0.6
blend_mode = 2
texture = ExtResource("3_7ft35")

[node name="LightHelmet" type="PointLight2D" parent="Sprite2D"]
color = Color(0.956863, 0.619608, 0.113725, 1)
range_layer_min = -1
shadow_enabled = true
shadow_color = Color(0, 0, 0, 0.215686)
texture = ExtResource("3_7ft35")
offset = Vector2(0, -4)
texture_scale = 0.6

[node name="LightOccluder2D" type="LightOccluder2D" parent="Sprite2D/LightHelmet"]
self_modulate = Color(1, 1, 1, 0)
occluder = SubResource("OccluderPolygon2D_wd8f2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = ExtResource("4_yu3yv")

[node name="AttackCooldown" type="Timer" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 32.0
max_neighbors = 5
debug_enabled = true
debug_use_custom = true
debug_path_custom_color = Color(0, 1, 1, 1)

[node name="UpdatePlayerPos" type="Timer" parent="NavigationAgent2D"]
process_callback = 0

[node name="KeepDistance" type="Node2D" parent="."]
visible = false

[node name="Position2D" type="Node2D" parent="KeepDistance"]
position = Vector2(-136, 0)

[node name="n1" type="Node2D" parent="KeepDistance"]
position = Vector2(-128, 0)

[node name="n2" type="Node2D" parent="KeepDistance"]

[node name="Line2D" type="Line2D" parent="KeepDistance"]
points = PackedVector2Array(-144, 0, 32, 0)

[node name="KeepMove" type="Node2D" parent="."]
visible = false

[node name="Position2D" type="Node2D" parent="KeepMove"]

[node name="n1" type="Node2D" parent="KeepMove"]
position = Vector2(0, -96)

[node name="n2" type="Node2D" parent="KeepMove"]
position = Vector2(0, 96)

[node name="Line2D" type="Line2D" parent="KeepMove"]
points = PackedVector2Array(0, -96, 0, 96)

[node name="VisibilityHandler" parent="." instance=ExtResource("5_jekor")]

[node name="N" parent="VisibilityHandler" index="0"]
position = Vector2(2.38419e-07, -2.14577e-06)
scale = Vector2(4.8, 4.8)

[connection signal="is_triggered" from="." to="." method="_on_is_triggered" flags=6]
[connection signal="area_entered" from="TriggerArea" to="." method="_on_TriggerArea_area_entered"]
[connection signal="body_entered" from="TriggerArea" to="." method="_on_TriggerArea_body_entered"]
[connection signal="area_entered" from="GeneralArea" to="." method="_on_general_area_entered"]
[connection signal="area_exited" from="GeneralArea" to="." method="_on_general_area_exited"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_velocity_computed"]
[connection signal="timeout" from="NavigationAgent2D/UpdatePlayerPos" to="." method="_on_UpdatePlayerPos_timeout"]

[editable path="VisibilityHandler"]
